--- a/app/scss/_base.scss
+++ b/app/scss/_base.scss
@@ -1,16 +1,9 @@
 /*** reset ***********/
-html,body,ul,ol,li,dl,dt,p,h1,h2,h3,h4,h5,h6,form,fieldset,a,img,label{margin:0;padding:0;border:0}
-header, section, footer, aside, nav, article {display:block}
-ul{list-style:none}
-$color1:#000;
-$color2:#fff;
+// html,body,ul,ol,li,dl,dt,p,h1,h2,h3,h4,h5,h6,form,fieldset,a,img,label{margin:0;padding:0;border:0}
+// header, section, footer, aside, nav, article {display:block}
+// ul{list-style:none}
 
-$color3:#f4f4f4;
-$color4:#1a237e;
-$color5:#666;
-$color6:#ff5722;
-$color7:#80bbde;
-$color8:#292929;
+
 
 
 * {
@@ -34,8 +27,10 @@ html {
 
 
 body{
-	background: url(../images/bg.jpg) no-repeat center / cover;
+	background: #031821 url(../images/bg.jpg) no-repeat center / cover;
 	// @include flexbox;
+	font-family: 'proximanovaregular';
+	color: $color3;
 	@include font-size(1.4);
 	flex-flow: column;
 	font-display: swap;
