--- a/app/scss/_colors.scss
+++ b/app/scss/_colors.scss
@@ -1,9 +1,9 @@
 $color1:#000;
 $color2:#fff;
 $color3:#b0cad3;
+$color4:#b7b7b7;
+$color5:#00b4a9;
+$color6:#a7a7a7;
+$color7:#00ffef;
 
-$color4:#1a237e;
-$color5:#666;
-$color6:#ff5722;
-$color7:#80bbde;
 $color8:#292929;
