--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'proxima';
-    src: url('../fonts/proxima_nova_semibold.woff2') format('woff2'),
-         url('../fonts/proxima_nova_semibold.woff') format('woff');
+    src: url('../fonts/ProximaNova-Semibold/proxima_nova_semibold.woff2') format('woff2'),
+         url('../fonts/ProximaNova-Semibold/proxima_nova_semibold.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-weight: 900;
@@ -9,14 +9,14 @@
 }
 
 
-@font-face {
-    font-family: 'proxima';
-    src: url('../fonts/proxima_nova_black.woff2') format('woff2'),
-         url('../fonts/proxima_nova_black.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-	font-weight: 700;
-}
+// @font-face {
+//     font-family: 'proxima';
+//     src: url('../fonts/proxima_nova_black.woff2') format('woff2'),
+//          url('../fonts/proxima_nova_black.woff') format('woff');
+//     font-weight: normal;
+//     font-style: normal;
+// 	font-weight: 700;
+// }
 
 
 
@@ -24,8 +24,8 @@
 
 @font-face {
     font-family: 'proxima';
-    src: url('../fonts/proxima_nova_bold.woff2') format('woff2'),
-         url('../fonts/proxima_nova_bold.woff') format('woff');
+    src: url('../fonts/ProximaNova-Bold/proxima_nova_bold.woff2') format('woff2'),
+         url('../fonts/ProximaNova-Bold/proxima_nova_bold.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-weight: 500;
@@ -35,8 +35,8 @@
 
 @font-face {
     font-family: 'proxima';
-    src: url('../fonts/proxima_nova_regular.woff2') format('woff2'),
-         url('../fonts/proxima_nova_regular.woff') format('woff');
+    src: url('../fonts/ProximaNova-Regular/proxima_nova_regular.woff2') format('woff2'),
+         url('../fonts/ProximaNova-Regular/proxima_nova_regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-weight: 400;
@@ -53,3 +53,13 @@
 //     font-weight: 100;
 
 // }
+
+
+@font-face {
+    font-family: 'proxima_novaregular_italic';
+    src: url('../fonts/ProximaNova-RegularIt/proxima_nova_regular_italic.woff2') format('woff2'),
+         url('../fonts/ProximaNova-RegularIt/proxima_nova_regular_italic.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
