--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -299,31 +299,30 @@ template {
 
 @font-face {
   font-family: 'proxima';
-  src: url("../fonts/proxima_nova_semibold.woff2") format("woff2"), url("../fonts/proxima_nova_semibold.woff") format("woff");
+  src: url("../fonts/ProximaNova-Semibold/proxima_nova_semibold.woff2") format("woff2"), url("../fonts/ProximaNova-Semibold/proxima_nova_semibold.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-weight: 900; }
 
 @font-face {
   font-family: 'proxima';
-  src: url("../fonts/proxima_nova_black.woff2") format("woff2"), url("../fonts/proxima_nova_black.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
-  font-weight: 700; }
-
-@font-face {
-  font-family: 'proxima';
-  src: url("../fonts/proxima_nova_bold.woff2") format("woff2"), url("../fonts/proxima_nova_bold.woff") format("woff");
+  src: url("../fonts/ProximaNova-Bold/proxima_nova_bold.woff2") format("woff2"), url("../fonts/ProximaNova-Bold/proxima_nova_bold.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-weight: 500; }
 
 @font-face {
   font-family: 'proxima';
-  src: url("../fonts/proxima_nova_regular.woff2") format("woff2"), url("../fonts/proxima_nova_regular.woff") format("woff");
+  src: url("../fonts/ProximaNova-Regular/proxima_nova_regular.woff2") format("woff2"), url("../fonts/ProximaNova-Regular/proxima_nova_regular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-weight: 400; }
+
+@font-face {
+  font-family: 'proxima_novaregular_italic';
+  src: url("../fonts/ProximaNova-RegularIt/proxima_nova_regular_italic.woff2") format("woff2"), url("../fonts/ProximaNova-RegularIt/proxima_nova_regular_italic.woff") format("woff");
+  font-weight: normal;
+  font-style: normal; }
 
 .container {
   margin-right: auto;
@@ -437,7 +436,7 @@ html {
 
 body {
   background: #031821 url(../images/bg.jpg) no-repeat center/cover;
-  font-family: 'proxima';
+  font-family: 'proxima', Georgia, sans-serif;
   color: #b0cad3;
   font-size: 14px;
   font-size: 1.4rem;
@@ -486,41 +485,9 @@ h3 {
   font-weight: normal; }
 
 /* font-family: "SegoeUIBold"; */
-@font-face {
-  font-family: "SegoeUIBold";
-  src: url("../fonts/SegoeUIBold/SegoeUIBold.eot");
-  src: url("../fonts/SegoeUIBold/SegoeUIBold.eot?#iefix") format("embedded-opentype"), url("../fonts/SegoeUIBold/SegoeUIBold.woff") format("woff"), url("../fonts/SegoeUIBold/SegoeUIBold.ttf") format("truetype");
-  font-style: normal;
-  font-weight: normal; }
-
-@font-face {
-  font-family: "SegoeUIItalic";
-  src: url("../fonts/SegoeUIItalic/SegoeUIItalic.eot");
-  src: url("../fonts/SegoeUIItalic/SegoeUIItalic.eot?#iefix") format("embedded-opentype"), url("../fonts/SegoeUIItalic/SegoeUIItalic.woff") format("woff"), url("../fonts/SegoeUIItalic/SegoeUIItalic.ttf") format("truetype");
-  font-style: normal;
-  font-weight: normal; }
-
-@font-face {
-  font-family: "SegoeUIBoldItalic";
-  src: url("../fonts/SegoeUIBoldItalic/SegoeUIBoldItalic.eot");
-  src: url("../fonts/SegoeUIBoldItalic/SegoeUIBoldItalic.eot?#iefix") format("embedded-opentype"), url("../fonts/SegoeUIBoldItalic/SegoeUIBoldItalic.woff") format("woff"), url("../fonts/SegoeUIBoldItalic/SegoeUIBoldItalic.ttf") format("truetype");
-  font-style: normal;
-  font-weight: normal; }
-
 strong,
 .bold {
-  font-weight: normal;
-  font-family: "SegoeUIBold"; }
-
-em, i,
-.italic {
-  font-style: normal;
-  font-family: "SegoeUIItalic"; }
-
-strong em,
-em strong {
-  font-weight: normal;
-  font-family: "SegoeUIBoldItalic"; }
+  font-weight: 500; }
 
 .tdn {
   text-decoration: none; }
@@ -532,7 +499,7 @@ em strong {
   .tdu:hover {
     text-decoration: none; }
 
-.before, .mainnav a:after {
+.before, .btn-learn-more:before, .mainnav a:after, .homepage .intro:after {
   content: "";
   display: block;
   position: absolute; }
@@ -553,7 +520,10 @@ em strong {
   font-family: 'proxima';
   font-size: 1.5rem;
   font-weight: 500;
-  transition: .3s; }
+  transition: .3s;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center; }
   .btn-blue {
     color: #fff;
     border-color: #00b4a9; }
@@ -564,6 +534,20 @@ em strong {
     border-radius: 4.5rem;
     height: 4.5rem;
     width: 13rem; }
+  .btn-learn-more {
+    border-radius: 6rem;
+    height: 6rem;
+    font-size: 2rem;
+    width: 20rem;
+    text-decoration: none;
+    padding-left: 10px;
+    position: relative; }
+    .btn-learn-more:before {
+      width: 18px;
+      height: 12px;
+      background: url(../images/arrow.png) no-repeat left center;
+      top: 40%;
+      left: 25px; }
 
 .extra-toggle {
   background: none;
@@ -647,6 +631,8 @@ em strong {
   .lang a {
     color: #a7a7a7;
     text-decoration: none; }
+    .lang a:hover {
+      color: #00b4a9; }
   .lang a, .lang span {
     margin-left: 1rem; }
 
@@ -656,6 +642,32 @@ em strong {
   height: 1px;
   overflow: hidden;
   clip: rect(0 0 0 0); }
+
+.homepage .intro {
+  padding-left: 10rem;
+  position: relative; }
+  .homepage .intro img {
+    margin-left: -8rem; }
+  .homepage .intro p {
+    color: #c0c0c0;
+    font-family: 'proxima_novaregular_italic';
+    font-size: 2.6rem;
+    margin-top: 0;
+    letter-spacing: .1em; }
+  .homepage .intro strong {
+    font-family: 'proxima';
+    font-weight: 500; }
+  .homepage .intro:after {
+    height: 63px;
+    border-left: 1px solid #00b4a9;
+    left: 450px;
+    bottom: -22px; }
+  .homepage .intro .btn {
+    margin-top: 3rem; }
+
+.homepage .main {
+  display: flex;
+  align-items: center; }
 
 /* =mobile-menu
 ---------------------------*/
