--- a/app/scss/_homepage.scss
+++ b/app/scss/_homepage.scss
@@ -32,4 +32,43 @@
 		display: flex;
 		align-items: center;
 	}
+
+	.main-pic{
+		margin-left: -4rem;
+		img{
+			-webkit-animation: pulsing 10s infinite;
+			animation: pulsing 10s infinite;
+		}
+	}
+}
+
+
+@-webkit-keyframes pulsing {
+  0% {
+    -webkit-transform: scale(0.9, 0.9);
+    transform: scale(0.9, 0.9)
+  }
+  50% {
+    -webkit-transform: scale(1.0, 1.0);
+    transform: scale(1.0, 1.0);
+  }
+  100% {
+    -webkit-transform: scale(0.9, 0.9);
+    transform: scale(0.9, 0.9);
+  }
+}
+
+@keyframes pulsing {
+  0% {
+    -webkit-transform: scale(0.9, 0.9);
+    transform: scale(0.9, 0.9)
+  }
+  50% {
+    -webkit-transform: scale(1.0, 1.0);
+    transform: scale(1.0, 1.0);
+  }
+  100% {
+    -webkit-transform: scale(0.9, 0.9);
+    transform: scale(0.9, 0.9);
+  }
 }
