--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -4,10 +4,12 @@
 @import 'grid';
 @import 'elements';
 @import 'flex';
-// @import 'sprite';
+@import 'sprite';
 @import 'base';
 @import 'homepage';
 @import 'mobmenu';
+@import 'slick';
+@import 'slick-theme';
 // @import 'cart';
 // @import 'modal';
 // @import 'nav';
