--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -324,6 +324,12 @@ template {
   font-weight: normal;
   font-style: normal; }
 
+@font-face {
+  font-family: 'proxima_novabold_italic';
+  src: url("../fonts/ProximaNova-BoldIt/proxima_nova_bold_italic.woff2") format("woff2"), url("../fonts/ProximaNova-BoldIt/proxima_nova_bold_italic.woff") format("woff");
+  font-weight: normal;
+  font-style: normal; }
+
 .container {
   margin-right: auto;
   margin-left: auto; }
@@ -441,7 +447,8 @@ body {
   font-size: 14px;
   font-size: 1.4rem;
   font-display: swap;
-  height: 100vh; }
+  height: 100vh;
+  font-weight: 400; }
 
 html, body {
   height: 100%; }
@@ -499,7 +506,7 @@ strong,
   .tdu:hover {
     text-decoration: none; }
 
-.before, .btn-learn-more:before, .mainnav a:after, .homepage .intro:after {
+.before, .btn-learn-more:before, .mainnav a:after, .homepage .intro:after, .slick-arrow:before {
   content: "";
   display: block;
   position: absolute; }
@@ -545,7 +552,10 @@ strong,
     .btn-learn-more:before {
       width: 18px;
       height: 12px;
-      background: url(../images/arrow.png) no-repeat left center;
+      background-image: url(../images/sprite.png);
+      background-position: -15px 0px;
+      width: 18px;
+      height: 12px;
       top: 40%;
       left: 25px; }
 
@@ -644,6 +654,7 @@ strong,
   clip: rect(0 0 0 0); }
 
 .homepage .intro {
+  margin-left: calc((100% - 1600px)/2);
   padding-left: 10rem;
   position: relative; }
   .homepage .intro img {
@@ -670,10 +681,58 @@ strong,
   align-items: center; }
 
 .homepage .main-pic {
+  flex-grow: 1;
   margin-left: -4rem; }
   .homepage .main-pic img {
     -webkit-animation: pulsing 10s infinite;
     animation: pulsing 10s infinite; }
+
+.homepage .content {
+  width: 100%; }
+
+.homepage .right {
+  width: 530px;
+  position: relative; }
+  .homepage .right .prevnext {
+    position: absolute;
+    left: -38px;
+    bottom: 88px; }
+  .homepage .right .new-title {
+    position: absolute;
+    left: -56px;
+    top: 20px; }
+
+#news-carousel .news-slide {
+  padding: 2rem 0;
+  width: 290px; }
+  #news-carousel .news-slide a {
+    padding: 3rem;
+    background: #13242b;
+    color: #fff;
+    height: 40rem;
+    display: block;
+    text-decoration: none; }
+    #news-carousel .news-slide a:hover h3 {
+      color: #00ffef; }
+  #news-carousel .news-slide h3 {
+    transition: .3s color;
+    font-weight: normal;
+    font-size: 1.4rem;
+    letter-spacing: 0.1em;
+    font-family: 'proxima_novabold_italic'; }
+  #news-carousel .news-slide p {
+    font-size: 1.3rem;
+    line-height: 2; }
+
+#news-carousel .slick-slide:not(.slick-current) {
+  opacity: .2; }
+
+#news-carousel .slick-current a {
+  transition: .3s box-shadow;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); }
+
+#news-carousel .slick-current:hover a {
+  box-shadow: 0 0 20px rgba(0, 255, 239, 0.5); }
 
 @-webkit-keyframes pulsing {
   0% {
@@ -922,6 +981,164 @@ strong,
                   text-decoration: underline; }
     #navbar .nav-tabs > li {
       margin: 0; } }
+
+/* Slider */
+.slick-slider {
+  position: relative;
+  display: block;
+  box-sizing: border-box;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -ms-touch-action: pan-y;
+  touch-action: pan-y;
+  -webkit-tap-highlight-color: transparent; }
+
+.slick-list {
+  position: relative;
+  overflow: hidden;
+  display: block;
+  margin: 0;
+  padding: 0; }
+  .slick-list:focus {
+    outline: none; }
+  .slick-list.dragging {
+    cursor: pointer;
+    cursor: hand; }
+
+.slick-slider .slick-track,
+.slick-slider .slick-list {
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  -o-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0); }
+
+.slick-track {
+  position: relative;
+  left: 0;
+  top: 0;
+  display: block;
+  margin-left: auto;
+  margin-right: auto; }
+  .slick-track:before, .slick-track:after {
+    content: "";
+    display: table; }
+  .slick-track:after {
+    clear: both; }
+  .slick-loading .slick-track {
+    visibility: hidden; }
+
+.slick-slide {
+  float: left;
+  height: 100%;
+  min-height: 1px;
+  display: none; }
+  [dir="rtl"] .slick-slide {
+    float: right; }
+  .slick-slide img {
+    display: block; }
+  .slick-slide.slick-loading img {
+    display: none; }
+  .slick-slide.dragging img {
+    pointer-events: none; }
+  .slick-initialized .slick-slide {
+    display: block; }
+  .slick-loading .slick-slide {
+    visibility: hidden; }
+  .slick-vertical .slick-slide {
+    display: block;
+    height: auto;
+    border: 1px solid transparent; }
+
+.slick-arrow.slick-hidden {
+  display: none; }
+
+/* Slider */
+/* Arrows */
+.slick-arrow {
+  display: block;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-position: left top;
+  border: none;
+  cursor: pointer;
+  height: 28px;
+  position: absolute;
+  top: 0;
+  width: 15px;
+  z-index: 10;
+  transition: .3s;
+  filter: grayscale(1) brightness(2); }
+  .slick-arrow:before {
+    background-image: url(../images/sprite.png);
+    background-position: 0px 0px;
+    width: 15px;
+    height: 28px;
+    left: 0;
+    top: 0; }
+  .slick-arrow:hover {
+    filter: none; }
+
+.slick-prev {
+  top: 40px;
+  transform: rotate(180deg); }
+
+.slick-next {
+  top: 0; }
+
+.slick-disabled {
+  opacity: .3; }
+
+.slick-slide {
+  position: relative; }
+
+/* Dots */
+.slick-dots {
+  position: absolute;
+  bottom: -25px;
+  list-style: none;
+  display: block;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  width: 100%; }
+  .slick-dots li {
+    position: relative;
+    display: inline-block;
+    height: 20px;
+    width: 20px;
+    margin: 0 5px;
+    padding: 0;
+    cursor: pointer; }
+    .slick-dots li button {
+      border: 4px solid #064ca1;
+      background: #fff;
+      display: block;
+      height: 14px;
+      width: 14px;
+      outline: none;
+      line-height: 0px;
+      font-size: 0px;
+      color: transparent;
+      padding: 0;
+      cursor: pointer;
+      transition: .3s; }
+      .slick-dots li button:hover, .slick-dots li button:focus {
+        outline: none;
+        background: #064ca1;
+        border: 3px solid #fff; }
+        .slick-dots li button:hover:before, .slick-dots li button:focus:before {
+          opacity: 1; }
+    .slick-dots li.slick-active button:before {
+      color: black;
+      opacity: 0.75; }
+  .slick-dots .slick-active button {
+    background: #064ca1;
+    border: 3px solid #fff; }
 
 /* =mobile-menu
 ---------------------------*/
