--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -63,11 +63,11 @@
     font-style: normal;
 }
 
-// @font-face {
-//     font-family: 'proxima_novabold_italic';
-//     src: url('../fonts/ProximaNova-BoldIt/proxima_nova_bold_italic.woff2') format('woff2'),
-//          url('../fonts/ProximaNova-BoldIt/proxima_nova_bold_italic.woff') format('woff');
-//     font-weight: normal;
-//     font-style: normal;
+@font-face {
+    font-family: 'proxima_novabold_italic';
+    src: url('../fonts/ProximaNova-BoldIt/proxima_nova_bold_italic.woff2') format('woff2'),
+         url('../fonts/ProximaNova-BoldIt/proxima_nova_bold_italic.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
 
-// }
+}
