--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -71,3 +71,14 @@
     font-style: normal;
 
 }
+
+
+@font-face {
+    font-family: 'proxima_novaextrabold_italic';
+    src: url('../fonts/ProximaNova-ExtraboldIt/proxima_nova_extrabold_italic.woff2') format('woff2'),
+         url('../fonts/ProximaNova-ExtraboldIt/proxima_nova_extrabold_italic.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
